# FLS-Hackathon-BCG-Saucerers

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Makefile  README.md  cloudrun.yaml  docker-compose.yml  longevity-pitch.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/adapters/: README.md  __init__.py  appointment_source.py  base.py  csv_source.py  photo_storage.py
backend/app/ai/: __init__.py  llm.py  prompt_loader.py
backend/app/cli/: __init__.py  export_openapi.py  ingest.py
backend/app/core/: __init__.py  config.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  clinical_review.py  daily_log.py  ehr_record.py  lifestyle_profile.py  meal_log.py  message.py  notification.py  patient.py  protocol.py  referral.py  survey_response.py  vitality_outlook.py  vitality_snapshot.py  wearable_day.py
backend/app/repositories/: __init__.py  base.py  clinical_review_repo.py  daily_log_repo.py  ehr_repo.py  meal_log_repo.py  message_repo.py  notification_repo.py  outlook_repo.py  patient_repo.py  protocol_repo.py  referral_repo.py  survey_repo.py  vitality_repo.py  wearable_repo.py
backend/app/routers/: __init__.py  admin.py  appointments.py  clinical_review.py  coach.py  daily_log.py  gdpr.py  health.py  insights_ai.py  meal_log.py  messages.py  notifications.py  patients.py  protocol.py  records_qa.py  referral.py  survey.py
backend/app/schemas/: __init__.py  ai_common.py  appointments.py  clinical_review.py  coach.py  daily_log.py  gdpr.py  (+13 more)
backend/tests/: conftest.py
(+251 files in other folders)
