[project]
name = "longevity-backend"
version = "0.1.0"
description = "Longevity+ MVP backend — FastAPI + SQLModel + async SQLAlchemy 2.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.130",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "python-json-logger>=3.0",
    "google-genai>=1.0",
    "sse-starlette>=2.0",
    "google-cloud-storage>=2.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-length enforced by ruff format, not ruff check
    "B009",  # getattr(Model, "col") is the required pattern under mypy strict — see CLAUDE.md lessons
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
# Allow SQLModel's dynamic field patterns
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "compose: requires a live docker-compose stack (deselect with -m 'not compose')",
]
addopts = "-m 'not compose'"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.9",
    "mypy>=1.10",
]
